[package]
name = "realia"
version = "0.1.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2018"
description = "Extra conditional compilation macros"
repository = "https://github.com/mtkennerly/realia"
readme = "README.md"
license = "MIT"
build = "build/build.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"
syn = { version = "1.0.33", features = ["full"] }
version-compare = "0.0.10"
which = "4.0.1"

[build-dependencies]
anyhow = "1.0.31"
cargo_metadata = "0.10.0"
serde_json = "1.0.56"
structopt = "0.3.15"
target-spec = "0.4.0"
toml = "0.5.6"
