[package]
name = "realia"
version = "0.2.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2018"
description = "Extra conditional compilation macros"
repository = "https://github.com/mtkennerly/realia"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.31"
cargo_metadata = "0.10.0"
proc-macro2 = "1.0.18"
quote = "1.0.7"
serde_json = "1.0.56"
syn = { version = "1.0.33", features = ["full"] }
target-spec = "0.4.0"
version-compare = "0.0.10"
which = "4.0.1"
